--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A social media application for Lambda Students",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "server": "nodemon"
+  },
   "license": "MIT",
   "private": false,
   "dependencies": {
