--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "helmet": "^3.18.0",
     "knex": "^0.17.1",
     "morgan": "^1.9.1",
