--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "prettier": "1.17.1"
   }
 }
