--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon"
+    "server": "nodemon",
+    "test": "jest"
   },
   "license": "MIT",
   "private": false,
