--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "faker": "^4.1.0",
     "helmet": "^3.18.0",
     "knex": "^0.17.1",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "sqlite3": "^4.0.8"
