--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-dotenv": "^0.2.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
