--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "Lambda-Social-App",
+  "name": "lambda-social-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "dev": "react-native run-android && react-native run-ios"
   },
   "dependencies": {
+    "@babel/plugin-external-helpers": "^7.2.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
@@ -14,6 +16,7 @@
     "react-native": "0.59.9",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
