--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'client'
+include ':react-native-auth0'
+project(':react-native-auth0').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-auth0/android')
 include ':react-native-screens'
 project(':react-native-screens').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-screens/android')
 include ':react-native-gesture-handler'
