--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-auth0": "^1.4.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.22",
