--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.22",
-    "react-navigation": "^3.11.0",
-    "react-redux": "^7.0.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
