--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.3.1",
     "faker": "^4.1.0",
     "helmet": "^3.18.0",
+    "jwks-rsa": "^1.5.1",
     "knex": "^0.17.1",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
