--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-external-helpers": "^7.2.0",
+    "@pusher/chatkit-client": "^1.5.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
