--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.11.0",
+    "react-router-dom": "^5.0.1",
     "react-router-native": "^5.0.1"
   },
   "devDependencies": {
