--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.11.0",
-    "react-router-native": "^5.0.1"
+    "react-router-native": "^5.0.1",
+    "react-router-native-stack": "^0.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
