--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-auth0')
     implementation project(':react-native-screens')
     implementation project(':react-native-gesture-handler')
