--- a/client/ios/LambdaSocial/Info.plist
+++ b/client/ios/LambdaSocial/Info.plist
@@ -57,6 +57,8 @@
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true />
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
