--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-auth0": "^1.4.2",
+    "react-native-aws3": "^0.0.9",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.1",
