--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'LambdaSocial'
+include ':amazon-cognito-identity-js'
+project(':amazon-cognito-identity-js').projectDir = new File(rootProject.projectDir, '../node_modules/amazon-cognito-identity-js/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':@react-native-community_async-storage'
