--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@babel/plugin-external-helpers": "^7.2.0",
     "@pusher/chatkit-client": "^1.5.0",
     "@react-native-community/async-storage": "^1.5.0",
+    "aws-amplify": "^1.1.29",
+    "aws-amplify-react-native": "^2.1.13",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
