--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@pusher/chatkit-client": "^1.5.0",
     "@react-native-community/async-storage": "^1.5.0",
-    "aws-amplify": "^1.1.29",
-    "aws-amplify-react-native": "^2.1.13",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
@@ -27,7 +24,8 @@
     "react-native-image-picker": "^0.28.1",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.1",
-    "react-router-native-stack": "^0.0.15"
+    "react-router-native-stack": "^0.0.15",
+    "socket.io-client": "2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
