added dynamic header then broke it

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "dev": "react-native run-android && react-native run-ios",
     "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "port": "yarn run start PORT=8081"
   },
   "dependencies": {
