--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,8 @@ development:
   timeout: 5000
 
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: test_database
   pool: 5
   timeout: 5000
 
