--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-swipeout": "^2.3.6",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.1",
     "react-router-native-stack": "^0.0.15"
