--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/async-storage": "^1.5.0",
     "aws-amplify": "^1.1.29",
     "aws-amplify-react-native": "^2.1.13",
+    "axios": "^0.19.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.1",
