--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
-
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -149,6 +148,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':amazon-cognito-identity-js')
     implementation project(':react-native-image-picker')
     implementation project(':@react-native-community_async-storage')
