--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'LambdaSocial'
+include ':react-native-svg'
+project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':amazon-cognito-identity-js'
 project(':amazon-cognito-identity-js').projectDir = new File(rootProject.projectDir, '../node_modules/amazon-cognito-identity-js/android')
 include ':react-native-image-picker'
