initialized basic fab component rework

--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
     implementation project(':amazon-cognito-identity-js')
     implementation project(':react-native-image-picker')
