--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-action-button": "^2.8.5",
     "react-native-auth0": "^1.4.2",
     "react-native-aws3": "^0.0.9",
     "react-native-dotenv": "^0.2.0",
