--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "faker": "^4.1.0",
