messed with auth, not 100% I fixed auth refresh token issues or not. Restyled the discussion component to make images not look horrible

--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -148,6 +148,10 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-sensitive-info')
+    implementation project(':react-native-restart')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-config')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
     implementation project(':react-native-image-picker')
