--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,13 @@
     "react-native-action-button": "^2.8.5",
     "react-native-auth0": "^1.4.2",
     "react-native-aws3": "^0.0.9",
+    "react-native-config": "^0.11.7",
+    "react-native-device-info": "^2.2.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.1",
+    "react-native-restart": "^0.0.12",
+    "react-native-sensitive-info": "^5.4.2",
     "react-native-svg": "^9.5.1",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.1",
