--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.6.4"
   },
   "jest": {
     "preset": "react-native"
