--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-native-svg": "^9.5.1",
     "react-navigation": "^3.11.0",
     "react-spring": "^8.0.27",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
