--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
+    "socket.io": "^2.2.0",
     "sqlite3": "^4.0.8"
   },
   "devDependencies": {
