--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.lambdasocial"
+        applicationId "com.neral"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
