--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'LambdaSocial'
+rootProject.name = 'neral'
 include ':react-native-restart'
 project(':react-native-restart').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-restart/android')
 include ':react-native-device-info'
