--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-native-config": "^0.11.7",
     "react-native-device-info": "^2.2.2",
     "react-native-dotenv": "^0.2.0",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
