--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
     implementation project(':react-native-restart')
     implementation project(':react-native-device-info')
     implementation project(':react-native-config')
@@ -160,6 +161,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -168,3 +172,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
