--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation project(':react-native-firebase')
     implementation project(':react-native-restart')
     implementation project(':react-native-device-info')
