--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-push-notification": "^3.1.8",
     "react-native-restart": "^0.0.12",
     "react-native-svg": "^9.5.1",
     "react-navigation": "^3.11.0",
