--- a/client/android/gradle.properties
+++ b/client/android/gradle.properties
@@ -20,3 +20,6 @@ MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=lambdasocial
 MYAPP_UPLOAD_KEY_PASSWORD=lambdasocial
+
+android.useAndroidX=true
+android.enableJetifier=true
