--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@babel/runtime": "^7.4.5",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
+    "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3",
     "reactotron-react-native": "^3.6.4"
