update google services for push notifications dependency

--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -161,13 +161,13 @@ dependencies {
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.react:react-native:0.59.9'  // From node_modules
 
-    implementation "com.google.android.gms:play-services-base:16.1.0"
-    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation 'com.google.android.gms:play-services-base:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
 
-    implementation "com.google.firebase:firebase-messaging:18.0.0"
-    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+   
     
 }
 
