--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-native-device-info": "^2.2.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-crop-picker": "^0.25.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-restart": "^0.0.12",
