firebase admin sdk

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^2.3.1",
     "faker": "^4.1.0",
+    "firebase-admin": "^8.3.0",
     "helmet": "^3.18.0",
     "jwks-rsa": "^1.5.1",
     "knex": "^0.17.1",
